<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topLinear"
        android:elevation="5dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/issues1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:elevation="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/issues1"
                android:textColor="@color/darkText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/issues2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:elevation="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:scaleType="fitStart"
                android:text="@string/issues2"
                android:textColor="@color/darkText"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/issues3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:elevation="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/issues3"
                android:textColor="@color/darkText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/issues4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:elevation="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/issues4"
                android:textColor="@color/darkText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/issues5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:elevation="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/issues5"
                android:textColor="@color/darkText"
                android:textSize="16sp" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>